petclinic_mandelbrot/mandelbrot.yaml

apiVersion: v1

kind: Service

metadata:

  name: mandelbrot


  labels:

    app: mandelbrot

spec:

  ports:

  - port: 8081
    name: http
    targetPort: 8081
    protocol: TCP
    
  selector:

    app: mandelbrot

---

apiVersion: apps/v1

kind: Deployment

metadata:

  name: mandelbrot-deployment-v1


spec:

  replicas: 1

  selector: 
    matchLabels: 
      
      app: mandelbrot

  template: # template for the pods

    metadata:

      labels:

        app: mandelbrot

        version: v1

    spec:

      containers:

      - name: mandelbrot

        image: wpwoodjr/mandelbrot:latest

        imagePullPolicy: Never

        ports:

        - containerPort: 8087

---
