petclinic_mandelbrot/petstore-mandelbrot-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-canary-gateway-onprem
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "petclinic.vmw.gsk.hclcnlabs.com"
    - "mandelbrot.vmw.gsk.hclcnlabs.com"
---

apiVersion: networking.istio.io/v1beta1   #Configure routes for traffic entering via above Gateway
kind: VirtualService
metadata:
  name: mandelbrot-route
spec:
  hosts:
  - "mandelbrot.vmw.gsk.hclcnlabs.com"
  gateways:
  - istio-canary-gateway-onprem
  http:
  - route:
    - destination:
        host: mandelbrot
        port:
          number: 8081
---

apiVersion: networking.istio.io/v1beta1   #Configure routes for traffic entering via above Gateway
kind: VirtualService
metadata:
  name: petstore-route
spec:
  hosts:
  - "petclinic.vmw.gsk.hclcnlabs.com"
  gateways:
  - istio-canary-gateway-onprem
  http:
  - route:
    - destination:
        host: api-service
        port:
          number: 8081
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: vets-service-destination
  namespace: default
spec:
  host: vets-service 
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

---
